# ur-webif-frontend

./: login-page.html  server.py  source.html  start_backend.sh  websocket_backend.py
assets/js/: dashboard.js  section-popup-examples.js  section-popup.js
backend-datalink/: CMakeLists.txt  Makefile  RPC_INTEGRATION.md
backend-datalink/data/: runtime-data.db
backend-datalink/include/: config_loader.h  database_manager.h  managed_websocket_server.h  rpc_client.h  websocket_server.h
backend-datalink/src/: config_loader.cpp  database_manager.cpp  main.cpp  managed_websocket_server.cpp  rpc_client.cpp  websocket_server.cpp
components/: backup-restore-section.html  firmware-upgrade-section.html  landing-section.html  license-section.html  mavlink-system-overview-section.html  network-priority-section.html  wireless-config-section.html
data/: dashboard_data.json
frontendpp/: CMakeLists.txt
frontendpp/config/: config.json
frontendpp/data/: auth.db
frontendpp/frontendpp/cmake/: CMakeLists.txt  attributes.hpp.in
frontendpp/include/: auth_handler.h  config_manager.h  file_handler.h  http_server.h  jwt_manager.h  logger.h
frontendpp/src/: auth_handler.cpp  config_manager.cpp  file_handler.cpp  http_server.cpp  jwt_manager.cpp  logger.cpp  main.cpp
frontendpp/web/: login-page.html  source.html
frontendpp/web/assets/css/: embedded-styles.css
frontendpp/web/assets/js/: dashboard-websocket.js  dashboard.js  enhanced-auth-system.js  jwt-token-manager.js  login-websocket.js  login.js  utility.js  websocket-client.js  websocket-system.js
frontendpp/web/assets/js/dashboard/: dashboard-websocket.js
frontendpp/web/components/: about-us-section.html  advance-network-section.html  attached-ip-cameras-section.html  cellular-config-section.html  landing-section.html  mavlink-extension-section.html  network-priority-section.html  network-utility-section.html  popup.js  vpn-configuration-section.html  wired-config-section.html
frontendpp/web/components/landing/: dashboard-websocket.js  main.js
